--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "API usando Node JS + Express",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
